--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "tsconfig-cheat-sheet-of-matt-pocock",
   "version": "0.0.0",
   "description": "Grabs the tsconfig.json from the cheat sheet of Matt Pocock",
-  "keywords": ["tsconfig", "cheat sheet"],
+  "keywords": [
+    "tsconfig",
+    "cheat sheet"
+  ],
   "author": "Kricsleo <kricsleo@163.com>",
   "license": "MIT",
   "homepage": "https://github.com/kricsleo/craie#readme",
@@ -13,5 +16,10 @@
   "packageManager": "pnpm@10.6.3",
   "scripts": {
     "dev": ""
+  },
+  "dependencies": {
+    "@types/node": "^22.13.11",
+    "cheerio": "^1.0.0",
+    "strip-json-comments": "^5.0.1"
   }
 }
