--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   },
   "exports": {
     ".": {
-      "import": "./src/index.mjs",
-      "require": "./src/index.cjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
-  "main": "src/index.cjs",
-  "module": "src/index.mjs",
-  "types": "src/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "bin": "./dist/cli.mjs",
   "packageManager": "pnpm@10.7.1",
   "scripts": {
     "dev": "bun run src/index.ts",
