--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "build": "unbuild"
   },
   "dependencies": {
-    "cheerio": "^1.0.0"
+    "cheerio": "^1.0.0",
+    "citty": "^0.1.6"
   },
   "devDependencies": {
     "@types/node": "^22.15.3",
