--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "bin": "./dist/cli.mjs",
   "packageManager": "pnpm@10.10.0",
   "scripts": {
-    "dev": "bun run src/index.ts",
+    "generate": "bun run src/index.ts",
     "build": "unbuild"
   },
   "dependencies": {
